# raycaster

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  compile_flags.txt  x86_64-linux.toolchain.cmake  x86_64-windows.toolchain.cmake
include/game/: assets.h  configuration.h  player.h  render.h  renderer.h  timer.h  window.h
src/: assets.c  main.c  player.c  render.c  renderer.c  timer.c  window.c
